--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,6 +16,9 @@
         android:name="com.example.bookstore.ui.cart.CartFragment"
         android:label="@string/title_cart"
         tools:layout="@layout/fragment_cart" />
+         <action
+            android:id="@+id/home_to_bookDetail"
+            app:destination="@id/navigation_book_detail" />
 
     <fragment
         android:id="@+id/navigation_orders"
@@ -28,4 +31,11 @@
         android:name="com.example.bookstore.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/navigation_book_detail"
+        android:name="com.example.bookstore.ui.book_detail.BookDetailFragment"
+        android:label="Book Detail"
+        tools:layout="@layout/fragment_book_detail" />
+
 </navigation>
