--- a/Frontend/app/src/main/res/layout/fragment_book_detail.xml
+++ b/Frontend/app/src/main/res/layout/fragment_book_detail.xml
@@ -4,8 +4,9 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/composeView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </FrameLayout>
