--- a/Frontend/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Frontend/app/src/main/res/navigation/mobile_navigation.xml
@@ -60,7 +60,15 @@
         android:id="@+id/navigation_profile"
         android:name="com.example.bookstore.ui.userprofile.UserProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_user_profile" />
+        tools:layout="@layout/fragment_user_profile" >
+
+        <action
+            android:id="@+id/action_profile_to_login"
+            app:destination="@id/navigation_login"
+            app:popUpTo="@id/mobile_navigation"
+            app:popUpToInclusive="true" />
+
+    </fragment>
 
     <!--  Navigation Book Detail UI  -->
     <fragment
